force-app/main/default/objects/Account/fields/Permit_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Permit_Turnaround_Time__c</fullName>
    <description>28043</description>
    <inlineHelpText>Enter the number of days that AHJ takes to issue a permit. (Expiration Indicator will use value to flag expiring permits</inlineHelpText>
    <label>Permit Turnaround Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>