force-app/main/default/objects/Account/fields/SAP_Company_code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Company_code__c</fullName>
    <externalId>true</externalId>
    <label>SAP_Company_code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>