force-app/main/default/objects/Account/fields/SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Customer_Number__c</fullName>
    <description>28655</description>
    <externalId>true</externalId>
    <inlineHelpText>From Integration</inlineHelpText>
    <label>Customer Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>