force-app/main/default/objects/Account/fields/Summarized_Completed_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Completed_Estimates__c</fullName>
    <description>This is summary of all Service Contracts -&gt; Summarized Completed Estimates.</description>
    <inlineHelpText>This is summary of all Service Contracts -&gt; Summarized Completed Estimates.</inlineHelpText>
    <label>Summarized Completed Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>