force-app/main/default/objects/Account/fields/Summarized_Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Total_Estimated_Cost__c</fullName>
    <description>This is summary of all Service Contracts -&gt; Summarized Total Estimated Cost values.</description>
    <inlineHelpText>This is summary of all Service Contracts -&gt; Summarized Total Estimated Cost values.</inlineHelpText>
    <label>Summarized Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>