force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <description>Vendor Accounts for Authorities Having Jurisdictions and more</description>
    <label>Vendor</label>
</RecordType>