force-app/main/default/objects/Account/listViews/Authorities_Having_Jurisdiction_Accounts.listView-meta.xml
<ListView>
    <fullName>Authorities_Having_Jurisdiction_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Permit_Turnaround_Time__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Authority Having Jurisdiction</value>
    </filters>
    <label>Authorities Having Jurisdiction Accounts</label>
</ListView>